--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,9 @@
 nav {
   margin-bottom: 10px;
+  /* position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 9999; */
 }
 
 img {
@@ -78,7 +82,7 @@ img {
   .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link {
     text-align: center;
     display: table-cell;
-    height: 70px;
+    height: 50px;
     vertical-align: middle;
     padding-top: 0;
     padding-bottom: 0;
@@ -101,7 +105,7 @@ img {
   .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link {
     text-align: center;
     display: table-cell;
-    height: 70px;
+    height: 50px;
     vertical-align: middle;
     padding-top: 0;
     padding-bottom: 0;
