--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,6 +23,14 @@
         </a>
       </li>
 
+      <li class="nav-item active">
+        <a class="nav-link" href="/newQuestion">
+          <fa-icon [icon]="faPlus"></fa-icon>
+          Add new Question
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+
     </ul>
     <form class="form-inline my-2 my-sm-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search..." aria-label="Search">
