--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-icon-top navbar-expand-lg bg-dark text-yellow">
-  <img src="../../../assets/images/logo.png">
+  <a class="nav-link" href="#"><img src="../../../assets/images/logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,16 +7,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <fa-icon [icon]="faHome"></fa-icon>
-          Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="/questions">
+        <a class="nav-link" href="/viewQuestions">
           <fa-icon [icon]="faQuestion"></fa-icon>
           Questions
           <span class="sr-only">(current)</span>
