styling of tui editor

--- a/src/app/components/new-question/new-question.component.html
+++ b/src/app/components/new-question/new-question.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <tui-editor [options] = "options" ></tui-editor>
-    <button (click)="saveQuestion()">Save</button>
+    <tui-editor></tui-editor>
+    <button class = "btn btn-warning" (click)="saveQuestion()" style="margin-top: 5px">Save</button>
 </div>
