--- a/src/app/components/questions-content/questions-content.component.html
+++ b/src/app/components/questions-content/questions-content.component.html
@@ -1,4 +1,4 @@
-<div class="card-header" *ngIf="questions.length > 0">
+<!-- <div class="card-header" *ngIf="questions.length > 0">
   {{category}}
 </div>
 <div class="card" *ngFor="let question of questions">
@@ -9,4 +9,4 @@
     <button class ="btn btn-secondary" *ngIf="!question.revealAnswer" (click)="toggleAnswer(question, true)">Show answer</button>
     <pre class="text-muted" *ngIf="question.revealAnswer"><li class="list-group-item"><button class ="btn btn-secondary" (click)="toggleAnswer(question, false)">Hide answer</button> {{question.answer}}</li></pre>
   </div>
-</div>
+</div> -->
