--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,114 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~highlight.js/styles/github.css';
-@import 'bootstrap.css';
+@import "~highlight.js/styles/github.css";
+@import "bootstrap.css";
 
-
-
-
-.hljs {
-  margin: 0 1em;
-  padding: 10px;
-  border: 1px solid gray;
-  border-radius: 4px;
-  transition: border ease 1s;
-
-  color: #A9B7C6;
-  background-color: #313335;
+.CodeMirror {
+  background-color: #303030 !important;
+  color: #a9b7c6 !important;
 }
 
-.hljs-keyword {
-  color: #CC7832;
+.CodeMirror-cursor {
+  border-left: 1px solid #a9b7c6 !important;
 }
 
-.hljs-title {
-  color: #FFC66D;
+.tui-editor-contents pre {
+  background-color: #2d2d2d !important;
+  color: white !important;
 }
 
-.hljs-comment {
-  color: #629755;
+.tui-editor-defaultUI-toolbar {
+  background-color: #303030 !important;
 }
 
-.hljs-meta {
-  color: #BBB529;
+.te-toolbar-section {
+  border-bottom: 1px solid #cc7832 !important;
 }
 
-.hljs-number {
-  color: #6897BB;
+.tui-toolbar-divider {
+  background-color: #cc7832 !important;
 }
 
-.hljs-string {
-  color: #6A8759;
+.te-toolbar-section button {
+  background-color: #a9b7c6 !important;
+}
+
+.tui-table {
+  display: none !important;
+}
+
+.tui-heading {
+  display: none !important;
+}
+
+.tui-quote {
+  display: none !important;
+}
+
+.tui-hrline {
+  display: none !important;
+}
+
+.tui-task {
+  display: none !important;
+}
+
+.tui-indent {
+  display: none !important;
+}
+
+.tui-outdent {
+  display: none !important;
+}
+
+.tui-toolbar-divider {
+  display: none !important;
+}
+
+.te-md-splitter {
+  border: 0.5px solid #cc7832 !important;
+}
+
+.tui-editor-defaultUI {
+  border: 1px solid #cc7832 !important;
+}
+
+.te-mode-switch-section {
+  display: none !important;
+}
+
+.tui-popup-header {
+  background-color: #2d2d2d !important;
+  border-bottom: 1px solid #cc7832 !important;
+}
+
+.tui-popup-header .tui-popup-title {
+  color: #cc7832 !important;
+}
+
+.tui-popup-body {
+  background-color: #4e4d4d !important;
+}
+.tui-editor-popup .tui-popup-body label {
+  color: white !important;
+}
+
+.tui-popup-wrapper {
+  -webkit-box-shadow: 5px 5px 20px 10px rgba(78,77,77,0.7);
+-moz-box-shadow: 5px 5px 20px 10px rgba(78,77,77,0.7);
+box-shadow: 5px 5px 20px 10px rgba(78,77,77,0.7);
+  border: none !important;
+}
+
+.tui-editor-defaultUI button.te-ok-button {
+  background-color: #cc7832 !important;
+}
+
+.te-popup-add-image .te-tab button.te-tab-active {
+  background-color: #cc7832 !important;
+}
+
+.te-popup-add-image .te-tab button {
+  color: white !important;
+  background-color: #777 !important;
 }
