Question Creator integrated  with backend + error handling

--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-1 header">Question </div>
-<div #question class="ngx-tui-editor" style="margin-bottom: 5px;"></div>
+<div #question class="ngx-tui-editor"></div>
 
 <div class="col-sm-1 header">Answer</div>
-<div #answer class="ngx-tui-editor" style="margin-bottom: 5px;"></div>
+<div #answer class="ngx-tui-editor"></div>
