--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -1,11 +1,15 @@
-@import '~tui-editor/dist/tui-editor-contents';
-@import '~tui-editor/dist/tui-editor';
-@import '~codemirror/lib/codemirror';
-@import '~highlight.js/styles/github';
+@import "~tui-editor/dist/tui-editor-contents";
+@import "~tui-editor/dist/tui-editor";
+@import "~codemirror/lib/codemirror";
+@import "~highlight.js/styles/github";
 
 .header {
   border: 1px solid #cc7832;
   background-color: #2d2d2d !important;
   border-radius: 5px;
   text-align: center;
+}
+
+.ngx-tui-editor {
+  margin-bottom: 5px;
 }
