--- a/src/app/components/question-view/question-view.component.html
+++ b/src/app/components/question-view/question-view.component.html
@@ -1,11 +1,11 @@
 <div class="card" *ngFor="let question of questions">
   <div class="card-header" *ngIf="questions.length > 0"></div>
   <div class="card-body">
-    <a href="#" class="badge badge-primary">{{question.tags[0]?.value}}</a>
-    <a href="#" class="badge badge-secondary">{{question.tags[1]?.value}}</a>
-    <a href="#" class="badge badge-success">{{question.tags[2]?.value}}</a>
-    <a href="#" class="badge badge-danger">{{question.tags[3]?.value}}</a>
-    <a href="#" class="badge badge-warning">{{question.tags[4]?.value}}</a>
+    <!-- <a href="#" class="badge badge-primary">{{question?.tags[0]?.value}}</a>
+    <a href="#" class="badge badge-secondary">{{question?.tags[1]?.value}}</a>
+    <a href="#" class="badge badge-success">{{question?.tags[2]?.value}}</a>
+    <a href="#" class="badge badge-danger">{{question?.tags[3]?.value}}</a>
+    <a href="#" class="badge badge-warning">{{question?.tags[4]?.value}}</a> -->
     <pre class="text-muted"> <markdown ngPreserveWhitespaces>{{question.content}}</markdown></pre>
     <button class="btn btn-secondary" *ngIf="!question.revealAnswer" (click)="toggleAnswer(question, true)">Show
       answer</button>
