--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,13 +1,13 @@
 nav {
   margin-bottom: 10px;
-  /* position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 9999; */
 }
 
 img {
   max-width: 70px;
+}
+
+.left-margin {
+  margin-left: 5px;
 }
 
 .navbar-icon-top .navbar-nav .nav-link > .fa {
