--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button [disabled]="loading" class="btn btn-warning">Sign Up</button>
+        <button class="btn btn-warning">Sign Up</button>
       </div>
     </form>
   </div>
