--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,6 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
       <li class="nav-item active">
         <a class="nav-link" href="/viewQuestions">
           <fa-icon [icon]="faQuestion"></fa-icon>
@@ -16,16 +15,14 @@
         </a>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="authService.isAuthenticated()">
         <a class="nav-link" href="/newQuestion">
           <fa-icon [icon]="faPlus"></fa-icon>
           Add new Question
           <span class="sr-only">(current)</span>
         </a>
       </li>
-
     </ul>
-
 
     <ul class="navbar-nav" *ngIf="authService.isAuthenticated()">
       <li class="nav-item active">
