--- a/src/app/components/tag-submenu/tag-submenu.component.html
+++ b/src/app/components/tag-submenu/tag-submenu.component.html
@@ -1,7 +1,8 @@
 <div class="card" *ngFor="let tag of tags">
-    <div class="card-body">
-        <button type="button" class="btn btn-primary">
-            {{tag.value}} <span class="badge badge-light">{{tag.occurrences}}</span>
-          </button>
-    </div>
+  <div class="card-body">
+    <div class="btn-group btn-group-toggle">
+      <label class="btn-primary" ngbButtonLabel>
+        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag, $event)"> {{tag.value}}
+      </label>
   </div>
+</div>
