--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-2 sticky-menu">
-      <app-tag-submenu ></app-tag-submenu>
+      <app-tag-submenu (tagsToFilterByChanged)="onTagsFilterChange($event)"></app-tag-submenu>
     </div>
     <div class="col-10">
-        <app-question-view></app-question-view>
+        <app-question-view [tagsToFilterBy]="tagsToFilterByQuestions"></app-question-view>
     </div>
   </div>
 </div>
