--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -31,7 +31,19 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-warning">Sign In</button>
+
+      <div class="container">
+        <div>
+          <button class="btn btn-warning">Sign In</button>
+        </div>
+      </div>
+      <div class="container">
+        <div>
+          <button class="loginBtn loginBtn--facebook" (click)="loginWithFacebook()">
+            Login with Facebook
+          </button>
+        </div>
+      </div>
     </form>
   </div>
 </div>
