Minor look and feel improvements

--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -34,7 +34,9 @@
 
       <div class="container">
         <div>
-          <button class="btn btn-warning">Sign In</button>
+          <a class="btn btn-block btn-social btn-openid" (click)="onSubmit()">
+            <span class="fa fa-sign-in"></span> Sign in
+          </a>
         </div>
       </div>
       <div class="container">
