filtering questions by tags

--- a/src/app/components/tag-submenu/tag-submenu.component.html
+++ b/src/app/components/tag-submenu/tag-submenu.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="btn-group btn-group-toggle">
       <label class="btn-primary" ngbButtonLabel>
-        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag, $event)"> {{tag.value}}
+        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)"> {{tag.value}}
       </label>
   </div>
 </div>
