fixed visualy tags, added error handling for filtering

--- a/src/app/components/tag-submenu/tag-submenu.component.css
+++ b/src/app/components/tag-submenu/tag-submenu.component.css
@@ -1,3 +1,11 @@
 .btn-primary:not(:disabled):not(.disabled).active{
     background-color:#cc7832 !important; 
 }
+
+.card-header {
+  text-align: center !important;
+}
+
+.btn {
+  margin: 3px !important;
+}
