--- a/src/app/components/tag-submenu/tag-submenu.component.html
+++ b/src/app/components/tag-submenu/tag-submenu.component.html
@@ -1,7 +1,8 @@
-<div class="card" *ngFor="let tag of tags">
-  <div class="card-body">
-    <div class="btn-group btn-group-toggle">
-      <label class="btn-primary" ngbButtonLabel>
+
+<div class="card overflow-auto">
+  <div class="card-header">Categories</div>
+  <div class="btn-group-toggle">
+      <label class="btn-primary" ngbButtonLabel *ngFor="let tag of tags">
         <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)"> {{tag.value}}
       </label>
   </div>
