added loading for filtering questions + minor ux fixes

--- a/src/app/components/question-view/question-view.component.css
+++ b/src/app/components/question-view/question-view.component.css
@@ -3,3 +3,16 @@
     word-wrap: break-word;
     hyphens: auto;
   }
+
+.badge {
+  padding: 0.25em 0.6em !important;
+  margin: 1px !important;
+}
+
+.badge-secondary {
+  background-color: #644 !important;
+}
+
+.card {
+  margin-bottom: 0.7em !important;
+}
