--- a/src/app/components/question-view/question-view.component.html
+++ b/src/app/components/question-view/question-view.component.html
@@ -1,6 +1,6 @@
+<app-loader [display]="loading"></app-loader>
 <div class="card" *ngFor="let question of questions">
-  <div class="card-header" *ngIf="questions.length > 0"></div>
-  <div class="card-body">
+  <div class="card-header" *ngIf="questions.length > 0">
     <div *ngIf="question.tags?.length > 0">
       <a href="#" class="badge badge-primary">{{question.tags[0]}}</a>
       <a href="#" class="badge badge-secondary">{{question.tags[1]}}</a>
@@ -8,6 +8,8 @@
       <a href="#" class="badge badge-danger">{{question.tags[3]}}</a>
       <a href="#" class="badge badge-warning">{{question.tags[4]}}</a>
     </div>
+  </div>
+  <div class="card-body">
     <pre class="text-muted"> <markdown ngPreserveWhitespaces>{{question.content}}</markdown></pre>
     <button class="btn btn-secondary" *ngIf="!question.revealAnswer" (click)="toggleAnswer(question, true)">Show
       answer</button>
