--- a/src/app/components/tag-submenu/tag-submenu.component.html
+++ b/src/app/components/tag-submenu/tag-submenu.component.html
@@ -3,7 +3,7 @@
   <div class="card-header">Categories</div>
   <div class="btn-group-toggle">
       <label class="btn-primary" ngbButtonLabel *ngFor="let tag of tags">
-        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)"> {{tag.value}}
+        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)"> {{tag.value.toString().split('_').join(' ')}}
       </label>
   </div>
 </div>
