--- a/src/app/components/tag-submenu/tag-submenu.component.css
+++ b/src/app/components/tag-submenu/tag-submenu.component.css
@@ -1,5 +1,5 @@
 .btn-primary:not(:disabled):not(.disabled).active{
-    background-color:#cc7832 !important; 
+    background-color:#cc7832 !important;
 }
 
 .card-header {
@@ -17,4 +17,14 @@
 
 .btn-primary:hover {
   color: orange !important;
+}
+
+.btn:focus, .btn.focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+.btn-primary:focus, .btn-primary.focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
