--- a/src/app/components/tag-submenu/tag-submenu.component.html
+++ b/src/app/components/tag-submenu/tag-submenu.component.html
@@ -1,9 +1,13 @@
-
 <div class="card overflow-auto">
   <div class="card-header">Categories</div>
   <div class="btn-group-toggle">
-      <label class="btn-primary" ngbButtonLabel *ngFor="let tag of tags">
-        <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)"> {{tag.value.toString().split('_').join(' ')}}
-      </label>
+    <label class="btn-primary" ngbButtonLabel *ngFor="let tag of tags">
+      <input type="checkbox" ngbButton [(ngModel)]="tag.toggled" (click)="filterQuestions(tag)">
+      {{tag.value.toString().split('_').join(' ')}}
+    </label>
+  </div>
+
+  <div class="clear-section card-header">
+    <button class="btn btn-primary" ngbButton (click)="deleteTagsSelection()"> Clear selections </button>
   </div>
 </div>
