--- a/src/app/components/tag-submenu/tag-submenu.component.css
+++ b/src/app/components/tag-submenu/tag-submenu.component.css
@@ -7,6 +7,11 @@
   margin-bottom: 0.25em;
 }
 
+.side-bar{
+  min-height: 100%;
+  min-width: auto !important;
+}
+
 .btn {
   margin: 3px !important;
 }
@@ -20,10 +25,6 @@
   color: orange !important;
 }
 
-.clear-section {
-  margin-top: 0.25em;
-  width: 100%;
-}
 .btn:focus,
 .btn.focus {
   -webkit-box-shadow: none !important;
@@ -34,4 +35,23 @@
 .btn-primary.focus {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
+}
+
+.docked-button {
+  position: sticky;
+  bottom: 0;
+}
+
+.clear-button {
+  background-color: #cc7832 !important;
+  width: 100%;
+}
+
+.clear-button:hover {
+  color: #444 !important;
+}
+
+.scrollable{
+  overflow-y: auto;
+  height: 75vh;
 }
