--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -5,7 +5,7 @@
     </ul>
   </ngb-alert>
   <div class="row">
-    <div class="col-2 sticky-menu">
+    <div class="col-2 sticky-menu vh-100">
       <app-tag-submenu (tagsToFilterByChanged)="onTagsFilterChange($event)"></app-tag-submenu>
     </div>
     <div class="col-10">
