--- a/src/app/components/question-view/question-view.component.css
+++ b/src/app/components/question-view/question-view.component.css
@@ -1,8 +1,8 @@
 .ow {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    hyphens: auto;
-  }
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
 
 .badge {
   padding: 0.25em 0.6em !important;
@@ -15,4 +15,20 @@
 
 .card {
   margin-bottom: 0.7em !important;
+}
+
+.list-group-item {
+  max-width: fit-content;
+  white-space: pre-line;
+  padding: 0;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 0;
+}
+
+button:not(:disabled),
+[type='button']:not(:disabled),
+[type='reset']:not(:disabled),
+[type='submit']:not(:disabled) {
+  margin-bottom: 2rem;
 }
