--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -48,6 +48,7 @@
 *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+          white-space: initial;
 }
 
 html {
@@ -113,7 +114,9 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
 
 ol ol,
@@ -121,6 +124,8 @@ ul ul,
 ol ul,
 ul ol {
   margin-bottom: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
 
 dt {
@@ -10633,6 +10638,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .text-muted {
   color: #888 !important;
+  white-space: pre-wrap;
 }
 
 .text-black-50 {
