--- a/src/app/components/question-view/question-view.component.html
+++ b/src/app/components/question-view/question-view.component.html
@@ -3,7 +3,7 @@
   <div class="card-header" *ngIf="questions.length > 0">
     <div *ngIf="question.tags?.length > 0" class="row">
       <div *ngFor="let tag of question.tags; let i = index">
-        <label class="badge badge-{{tagStyles[i]}}">{{question.tags[i]}}</label>
+        <label class="badge badge-{{tagStyles[i]}}">{{question.tags[i].toString().split('_').join(' ')}}</label>
       </div>
     </div>
   </div>
@@ -17,5 +17,12 @@
           <markdown>{{question.answer}}</markdown>
         </li>
       </pre>
+  </div>
+</div>
+<div *ngIf="questions.length === 0">
+  <div class="card">
+    <div class="card-body text-middle">
+      <h2>Couldn't find anything with selected tags</h2>
+    </div>
   </div>
 </div>
